-added entities, crud operations, db setup with script
- Started working on junit