@@ -1,40 +1,7 @@
 Cassandra DB:
 create keyspace covid_hms with replication={'class':'SimpleStrategy', 'replication_factor':1};
 
-CREATE TABLE covid_hms.patientdetails (
-	patientid text,
-	admittedon date,
-	actiontaken text,
-	covidactivestatus boolean,
-	age int,
-	bedallotment text,
-	city text,
-	comment text,
-	comorbidity boolean,
-	contacthistory boolean,
-	country text,
-	dateOfthirdresult date,
-	dateoffirstresult date,
-	dateofsecondresult date,
-	dischargedon date,
-	district text,
-	dob date,
-	dod date,
-	firstname text,
-	firstresult text,
-	landmark text,
-	lastname text,
-	mobilenumber text,
-	outcome text,
-	pincode int,
-	secondresult text,
-	sex text,
-	state text,
-	symptomstatus text,
-	thirdresult text,
-	travelhistory boolean,
-	PRIMARY KEY (patientid, admittedon)
-);
+CREATE TABLE covid_hms.patientdetails (patientid text, admittedon date, actiontaken text, covidactivestatus boolean, age int, bedallotment text, city text, comment text, comorbidity boolean, contacthistory boolean, country text, dateOfthirdresult date, dateoffirstresult date, dateofsecondresult date, dischargedon date, district text, dob date, dod date, firstname text, firstresult text, landmark text, lastname text, mobilenumber text, outcome text, pincode int, secondresult text, sex text, state text, symptomstatus text, thirdresult text, travelhistory boolean, PRIMARY KEY (patientid, admittedon));
 ===============================================================================================================
 
 
@@ -45,28 +12,44 @@ CREATE TABLE covid_hms.patientdetails (
 ----------------------------------------------------------------------------------------------------------------
 sample insert:
 
-INSERT INTO patientdetails (patientid,admittedon,covidactivestatus,age,city,country,dischargedon,district,dob,dod,firstname,landmark,lastname,mobilenumber,pincode,sex,state) VALUES ('b776ef4e-a269-11ea-bb37-df','2020-08-08',true,16,'nagpur','India',null,'nagpur','2001-01-01',null,'abc','school','xyz','98765914676',412455,'male','mh');
+INSERT INTO covid_hms.patientdetails (patientid,admittedon,covidactivestatus,age,city,country,dischargedon,district,dob,dod,firstname,landmark,lastname,mobilenumber,pincode,sex,state) VALUES ('b776ef4e-a269-11ea-bb37-df','2020-08-08',true,16,'nagpur','India',null,'nagpur','2001-01-01',null,'abc','school','xyz','98765914676',412455,'male','mh');
 ================================================================================================================
 
 Sample patient:
-POST : localhost:8080\covid\patient\
+POST : localhost:8080\covid\addPatient\
+
   {
-    "firstName": "suny",
-    "lastName": "xyz",
-		"active": false,
-    "age": 16,
-    "sex": "female",
-    "mobile": "346914676",
-    "landmark": "school",
-    "city": "nagpur",
+   "patientid": "03544fd8-003c-43bb-af28-ead72a98639f",
+    "firstname": "yyyyyyyyyyyyyyyyyyyyyyyyyyyyyyy",
+    "lastname": "asdfsdgsdsdgasd",
+    "age": 46,
+    "sex": "male",
+    "covidactivestatus": false,
+    "mobilenumber": "98765914676",
+    "landmark": "elephant",
+    "city": "uganda",
     "state": "mh",
-    "district": "nagpur",
-    "country": "India",
+    "district": "undada",
+    "country": "Africa",
     "pincode": 412455,
-    "dateOfBirth": "2001-01-01",
-    "dateOfDeath": "2001-01-01",
-    "dateOfAdmission": "2020-02-02",
-    "dateOfDischarge": "2020-02-03"
+    "dob": "2001-01-01",
+    "dod": "2020-07-08",
+    "admittedon": "2020-07-08",
+    "dischargedon": "2020-07-08",
+    "travelhistory": null,
+    "contacthistory": null,
+    "comorbidity": null,
+    "symptomstatus": null,
+    "actiontaken": null,
+    "bedallotment": null,
+    "outcome": null,
+    "dateoffirstresult": "2020-07-08",
+    "firstresult": null,
+    "dateofsecondresult": "2020-07-08",
+    "secondresult": null,
+    "dateofthirdresult": "2020-07-08",
+    "thirdresult": null,
+    "comment": null
   }
 
 
