@@ -1,24 +1,26 @@
 package com.avikdigidev.covid.hms.service;
 
+import java.sql.Date;
 import java.util.List;
 import java.util.Optional;
 
 import org.springframework.stereotype.Service;
 
+import com.avikdigidev.covid.hms.domain.request.PatientRequest;
+import com.avikdigidev.covid.hms.domain.response.PatientResponse;
 import com.avikdigidev.covid.hms.model.Patient;
-import com.datastax.driver.core.LocalDate;
 
 @Service
 public interface PatientService {
 	public List<Patient> getAllpatients();
 
-	public Optional<Patient> getPatientById(String patientId);
+	public PatientResponse getPatientById(String patientId);
 
-	public List<Patient> getPatientByAdmitDate(LocalDate dateOfAdmission);
+	public List<PatientResponse> getPatientByAdmitDate(Date dateOfAdmission);
 
-	public Patient createPatient(Patient newPatient);
+	public String createPatient(PatientRequest patientRequest);
 
-	public Optional<Patient> updatePatient(String patientId, Patient updatedPatient);
+	public String updatePatient(PatientRequest patientRequest);
 
 	public String deletePatient(String patientId);
 }
