@@ -2,3 +2,4 @@ spring.data.cassandra.keyspace-name=covid_hms
 spring.data.cassandra.contact-points=127.0.0.1
 spring.data.cassandra.port=9042
 server.servlet.context-path=/covid
+server.port=8588
